update signing key

--- a/HousecodeLib/Housecode.Net.Controls/Housecode.Net.Controls.iOS/Housecode.Net.Controls.iOS.csproj
+++ b/HousecodeLib/Housecode.Net.Controls/Housecode.Net.Controls.iOS/Housecode.Net.Controls.iOS.csproj
@@ -9,6 +9,8 @@
     <RootNamespace>Housecode.Net.Controls.iOS</RootNamespace>
     <AssemblyName>Housecode.Net.Controls.iOS</AssemblyName>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\HCNetControls.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
