--- a/HousecodeLib/Housecode.Net.Controls/Housecode.Net.Controls.Android/Housecode.Net.Controls.Android.csproj
+++ b/HousecodeLib/Housecode.Net.Controls/Housecode.Net.Controls.Android/Housecode.Net.Controls.Android.csproj
@@ -14,6 +14,8 @@
     <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
     <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
     <AndroidUseLatestPlatformSdk>true</AndroidUseLatestPlatformSdk>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\HCNetControls.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
